Show game link, fix sgf display on mobile and a few more small things

--- a/iglo/static/main.css
+++ b/iglo/static/main.css
@@ -58,3 +58,7 @@
 .clickable {
     cursor: pointer;
 }
+
+.sgf-container {
+    margin: 20px;
+}
